test/sema/typeck/module/struct-field-array-get-not-accessible.out
error: element is not accessible.
--> struct-field-array-get-not-accessible.dora:1:30
 | fn f(x: foo::Foo) { let _a = x.bar(10i64); }
                                ~~~~~
 | mod foo { pub struct Foo { bar: Array[Int32] } }
 | 
1 error found.
