test/sema/typeck/module/struct-field-array-get-not-accessible.dora
fn f(x: foo::Foo) { let _a = x.bar(10i64); }
mod foo { pub struct Foo { bar: Array[Int32] } }
